# Classification-RFH-and-FL

./: .gitignore  INFERENCE.py  INSTALLATION.md  MODEL_CARD.txt  README.md  REQUIREMENTS.txt  pyproject.toml  setup.bat  setup.sh  training_steps.md
data/: README  Supplementary Table 3.xlsx  Supplementary Table 5.xlsx  supplementary_table_2.xlsx  supplementary_table_6.xlsx
models/: README
results/: metrics
